--- a/src/features/recruitment/assets/style.css
+++ b/src/features/recruitment/assets/style.css
@@ -1,3 +1,9 @@
 .recruitmentSettingsForm {
   @apply bg-card px-4 py-5 rounded mb-5 shadow-sm flex justify-between items-center;
 }
+.applicantInfoPage {
+  @apply bg-card px-4 py-5 rounded mb-5 shadow-sm;
+}
+.applicantInfoPageParagraph {
+  @apply bg-white rounded border border-[#686868] p-2 mt-1 md:w-[20rem] w-[17rem] lg:w-[23rem];
+}
