--- a/src/index.css
+++ b/src/index.css
@@ -257,7 +257,8 @@ textarea.ant-input,
 textarea.ant-input,
 .ant-picker,
 .ant-select-dropdown {
-  background: var(--background) !important;
+  /* commented out so disabled form items can have proper effect */
+  /* background: var(--background) !important; */
 }
 
 /* enable disabled date inputs to be grayed out as intended */
@@ -275,6 +276,15 @@ textarea.ant-input,
   opacity: 1;
 }
 
+.ant-select[disabled],
+.ant-select-disabled {
+  color: rgba(0, 0, 0, 0.25);
+  background-color: green !important;
+  border-color: #d9d9d9 !important;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 1;
+}
 .ant-input[disabled] {
   color: rgba(0, 0, 0, 0.25);
   background-color: #f5f5f5 !important;
