--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+@import "antd/dist/antd.min.css";
+
 /* antd */
 /* @import "~antd/dist/antd.dark.css";
 @import "~antd/dist/antd.compact.css"; */
