feat(sorage-managemnt): completes implementation

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ body {
 }
 
 .transparentButton {
-  @apply border border-caramel hover:border-slate-800 rounded font-medium bg-transparent transition ease-in-out duration-500 text-sm tracking-wider;
+  @apply border border-caramel text-caramel hover:text-slate-800 hover:border-slate-800 rounded font-medium bg-transparent transition ease-in-out duration-500 text-sm tracking-wider;
   padding: 6px 8.5px;
 }
 .borderButton {
