Revert "Antd upgrade"

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
-/* @import "antd/dist/antd.min.css"; */
+@import "antd/dist/antd.min.css";
 
 /* antd */
 /* @import "~antd/dist/antd.dark.css";
@@ -36,6 +36,7 @@
 [color-theme="orange"] {
   --caramel: #d69a00;
 }
+
 
 [color-theme="green"] {
   --caramel: #01966b;
