--- a/src/index.css
+++ b/src/index.css
@@ -281,7 +281,7 @@ textarea.ant-input,
 .ant-select[disabled],
 .ant-select-disabled {
   color: rgba(0, 0, 0, 0.25);
-  background-color: green !important;
+  /* background-color: green !important; */
   border-color: #d9d9d9 !important;
   box-shadow: none;
   cursor: not-allowed;
@@ -289,7 +289,7 @@ textarea.ant-input,
 }
 .ant-input[disabled] {
   color: rgba(0, 0, 0, 0.25);
-  background-color: #f5f5f5 !important;
+  /* background-color: #f5f5f5 !important; */
   border-color: #d9d9d9 !important;
   box-shadow: none;
   cursor: not-allowed;
