--- a/src/index.css
+++ b/src/index.css
@@ -280,14 +280,14 @@ textarea.ant-input,
 
 /* enable disabled date inputs to be grayed out as intended */
 .ant-picker.ant-picker-disabled {
-  background: #f5f5f5 !important;
-  border-color: #d9d9d9 !important;
+  /* background: #f5f5f5 !important; */
+  /* border-color: #d9d9d9 !important; */
   cursor: not-allowed;
 }
 .ant-picker-input > input[disabled] {
   color: rgba(18, 18, 18, 0.838) !important;
-  background-color: #f5f5f5 !important;
-  border-color: #d9d9d9 !important;
+  /* background-color: var(--card) !important; */
+  /* border-color: #d9d9d9 !important; */
   box-shadow: none;
   cursor: not-allowed;
   opacity: 1;
@@ -357,9 +357,9 @@ textarea.ant-input,
 }
 
 /* modal adjustments */
-.ant-modal-root .ant-modal-content .ant-modal-header {
+/* .ant-modal-root .ant-modal-content .ant-modal-header {
   background: var(--background);
-}
+} */
 
 /* ant btn primary */
 .ant-btn-primary {
